# tfdoc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  out.csv  tfdoc_summary_lists.md
.github/: mergify.yml
.github/workflows/: check-markdown-links.yml  code-coverage.yml  lint-pr.yml  release.yml  typos.yml
src/: cli.rs  cli_builder.rs  exporter.rs  main.rs  parser.rs  printer.rs  types.rs  util.rs
tests/simple/: variables.tf
